<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableLayout
        android:id="@+id/tbl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0">

        <TableRow>

            <EditText
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/num_hint" />

            <Button
                android:id="@+id/pick_c"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/from"
                android:gravity="center"
                android:text="@string/contact" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/pick_m"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tbl"
        android:text="@string/btn_load" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pick_m"
        android:layout_marginBottom="40dp" />


</RelativeLayout>
